--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,37 @@
-.App {
-    text-align: center;
-}
 
-.board {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    justify-content: center;
-    margin: 20px auto;
-    width: 400px;
-}
 
 .card {
-    width: 90px;
-    height: 90px;
-    perspective: 1000px;
-    cursor: pointer;
+    /*width: 90px;*/
+    /*height: 90px;*/
+    /*perspective: 1000px;*/
+    /*cursor: pointer;*/
 }
 
 .card div {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden;
-    transition: transform 0.6s;
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    position: absolute;*/
+/*    backface-visibility: hidden;*/
+/*    transition: transform 0.6s;*/
 }
 
-.card.flipped .card-front {
-    transform: rotateY(0deg);
-}
+/*.card.flipped .card-front {*/
+/*    transform: rotateY(0deg);*/
+/*}*/
 
-.card.flipped .card-back {
-    transform: rotateY(180deg);
-}
+/*.card.flipped .card-back {*/
+/*    transform: rotateY(180deg);*/
+/*}*/
 
-.card-front {
-    transform: rotateY(180deg);
-}
+/*.card-front {*/
+/*    transform: rotateY(180deg);*/
+/*}*/
 
 .card-back {
-    background: #333;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-}
-
-img {
-    width: 100%;
-    height: 100%;
+    /*background: #333;*/
+    /*color: #fff;*/
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*font-size: 24px;*/
 }
