--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -1,7 +1,7 @@
 .board {
     display: grid;
-    grid-template-columns: repeat(var(--cols), 1fr);
-    grid-template-rows: repeat(var(--rows), 1fr);
+    /*grid-template-columns: repeat(var(--cols), 1fr);*/
+    /*grid-template-rows: repeat(var(--rows), 1fr);*/
     /*grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); !* Automatycznie dopasowuje kolumny *!*/
     gap: 10px;
     justify-content: center;
@@ -11,7 +11,7 @@
     /*height: auto;*/
     /*width: 540px;*/
     /*width: 100%;*/
-    background-color: #333; /* Ciemniejsze tło planszy */
+    background-color: var(--board-background)   ; /* Ciemniejsze tło planszy */
     max-width: 100%;
-    min-width: 300px;
+    min-width: 200px;
 }
