--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -10,6 +10,20 @@
     position: relative;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     margin: 0;
+
+    /*animation: dealCards 0.5s ease-out;*/
+    /*transform: translateY(-50px);*/
+    /*opacity: 0;*/
+    /*transition: transform 0.5s ease-out, opacity 0.5s ease-out;*/
+}
+
+/* Opcjonalnie: Dodatkowe style dla karty */
+.card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.5s ease;
 }
 
 .card.flipped .card-front {
@@ -42,7 +56,41 @@
 }
 
 .card-back {
-    background-color: var(--card-back-background); /* Kolor tla dla odwrotnej strony karty */
+    background-color: var(--card-back-background);
     color: var(--card-text-color);
     font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-back:hover {
+    color: var(--card-hover);
+    cursor: grab;
+}
+
+.card-back:active {
+    cursor: grabbing;
+}
+
+.card-front:hover {
+    cursor: grab;
+}
+
+/* Animacja dla kart */
+@keyframes dealCards {
+    0% {
+        transform: translateY(-50px); /* Początkowe położenie kart */
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0); /* Końcowe położenie */
+        opacity: 1;
+    }
+}
+
+/* Stosowanie animacji do kart */
+.card {
+    animation: dealCards 0.5s ease-out;
+    animation-delay: calc(0.1s * var(--i)); /* Opóźnienie dla każdej karty */
 }
