--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,3 +1,15 @@
+/* Animacja dla kart */
+@keyframes dealCards {
+    0% {
+        transform: translateY(-50px); /* Początkowe położenie kart */
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0); /* Końcowe położenie */
+        opacity: 1;
+    }
+}
+
 .card {
     background-color: var(--card-background);
     width: 100px;
@@ -11,19 +23,10 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     margin: 0;
 
-    /*animation: dealCards 0.5s ease-out;*/
-    /*transform: translateY(-50px);*/
-    /*opacity: 0;*/
-    /*transition: transform 0.5s ease-out, opacity 0.5s ease-out;*/
-}
-
-/* Opcjonalnie: Dodatkowe style dla karty */
-.card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 0.5s ease;
+    transform: translateY(-50px); /* Początkowa pozycja poza ekranem */
+    opacity: 0;
+    animation: dealCards 0.5s ease-out forwards;
+    animation-delay: calc(0.1s * var(--i)); /* Opóźnienie dla każdej karty */
 }
 
 .card.flipped .card-front {
@@ -75,22 +78,4 @@
 
 .card-front:hover {
     cursor: grab;
-}
-
-/* Animacja dla kart */
-@keyframes dealCards {
-    0% {
-        transform: translateY(-50px); /* Początkowe położenie kart */
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0); /* Końcowe położenie */
-        opacity: 1;
-    }
-}
-
-/* Stosowanie animacji do kart */
-.card {
-    animation: dealCards 0.5s ease-out;
-    animation-delay: calc(0.1s * var(--i)); /* Opóźnienie dla każdej karty */
 }
