--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,12 @@
+/*.select-board-filter {*/
+/*    width: 200px;*/
+/*    margin-left: 15px;*/
+/*    !*display: inline-block;*!*/
+/*}*/
 
+.best-scores-header {
+    position: relative;
+}
 
 .card {
     /*width: 90px;*/
