--- a/src/styles/AlertWithTimer.css
+++ b/src/styles/AlertWithTimer.css
@@ -66,7 +66,7 @@
     }
 
     .custom-alert {
-        max-width: 90%; /* Rozciągnięcie alertu na 90% szerokości ekranu */
+        max-width: 90%;
     }
 }
 
@@ -76,6 +76,6 @@
     }
 
     .custom-alert {
-        max-width: 100%; /* Alert zajmuje całą szerokość */
+        max-width: 100%;
     }
 }
