--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -1,26 +1,25 @@
 .board {
     display: grid;
-    /*grid-template-columns: repeat(var(--cols), 1fr);*/
-    /*grid-template-rows: repeat(var(--rows), 1fr);*/
-    /*grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); !* Automatycznie dopasowuje kolumny *!*/
     gap: 10px;
     justify-content: center;
     margin: 20px auto;
     width: auto;
     padding: 5px;
-    /*height: auto;*/
-    /*width: 540px;*/
-    /*width: 100%;*/
-    background-color: var(--board-background)   ; /* Ciemniejsze tło planszy */
+    background-color: var(--board-background);
     max-width: 100%;
     min-width: 200px;
 }
 
+.board > div {
+    aspect-ratio: 1 / 1; /* Karty sa zawsze kwadratowe */
+    width: 100%;
+    height: 100%;
+}
 
 @media (max-width: 768px) {
     .board {
         padding: 10px;
-        gap: 8px; /* Mniejszy odstęp między elementami */
+        gap: 8px;
     }
 }
 
