--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,15 +1,3 @@
-/* Animacja dla kart */
-@keyframes dealCards {
-    0% {
-        transform: translateY(-50px); /* Początkowe położenie kart */
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0); /* Końcowe położenie */
-        opacity: 1;
-    }
-}
-
 .card {
     background-color: var(--card-background);
     width: 100px;
@@ -22,23 +10,15 @@
     position: relative;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     margin: 0;
-
-    transform: translateY(-50px); /* Początkowa pozycja poza ekranem */
-    opacity: 0;
-    animation: dealCards 0.5s ease-out forwards;
-    animation-delay: calc(0.1s * var(--i)); /* Opoznienie dla kazdej karty */
-}
-
-.card.flipped .card-front {
-    transform: rotateY(0deg);
-}
-
-.card.flipped .card-back {
-    transform: rotateY(180deg);
+    transform-style: preserve-3d;
 }
 
 .card-front {
     transform: rotateY(180deg);
+}
+
+.card-container {
+    perspective: 1000px;
 }
 
 .card-front, .card-back {
@@ -59,6 +39,7 @@
 }
 
 .card-back {
+    transform: rotateY(0deg);
     background-color: var(--card-back-background);
     color: var(--card-text-color);
     font-size: 2rem;
@@ -80,25 +61,26 @@
     cursor: grab;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     .card {
-        width: 80px;
-        height: 80px;
+        width: 100%;
+        height: 100%;
     }
+    .card img {
+        width: 80%;
+        height: 80%;
+    }
+}
 
-    .card-front img {
+@media (max-width: 768px) {
+    .card img {
         width: 65%;
         height: 65%;
     }
 }
 
 @media (max-width: 480px) {
-    .card {
-        width: 70px;
-        height: 70px;
-    }
-
-    .card-front img {
+    .card img {
         width: 55%;
         height: 55%;
     }
